--- a/Viajando (2)/Viajando/CapaNegocio/CapaNegocio.csproj
+++ b/Viajando (2)/Viajando/CapaNegocio/CapaNegocio.csproj
@@ -47,9 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackUp\CN_BackUp.cs" />
     <Compile Include="CN_Alta usuario\AtributosUsuario.cs" />
     <Compile Include="CN_Alta usuario\CN_Alta_Usuario.cs" />
-    <Compile Include="BackUp\CN_BackUp.cs" />
     <Compile Include="Bitacora\CN_Bitacora.cs" />
     <Compile Include="CN_ResetearIntentosFallidos.cs" />
     <Compile Include="CN_Usuario\CN_BloquearUsuario.cs" />
@@ -108,9 +108,22 @@
       <Name>CapaSesion</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\CapaDatos.dll" />
+    <Content Include="bin\Debug\CapaDatos.pdb" />
+    <Content Include="bin\Debug\CapaNegocio.dll" />
+    <Content Include="bin\Debug\CapaNegocio.pdb" />
+    <Content Include="bin\Debug\CapaServicios.dll" />
+    <Content Include="bin\Debug\CapaServicios.pdb" />
+    <Content Include="bin\Debug\CapaSesion.dll" />
+    <Content Include="bin\Debug\CapaSesion.pdb" />
+    <Content Include="bin\Debug\Microsoft.VisualStudio.CodeCoverage.Shim.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Release\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
