--- a/Viajando (2)/Viajando/CapaServicios/CapaServicios.csproj
+++ b/Viajando (2)/Viajando/CapaServicios/CapaServicios.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Aleatorios.cs" />
     <Compile Include="ArmarMail.cs" />
+    <Compile Include="ComparaDigitoVerificador.cs" />
     <Compile Include="Contrasenia\MasterValidar.cs" />
     <Compile Include="Contrasenia\Validar8.cs" />
     <Compile Include="Contrasenia\ValidarDigito.cs" />
