--- a/Viajando (2)/Viajando/CapaNegocio/CapaNegocio.csproj
+++ b/Viajando (2)/Viajando/CapaNegocio/CapaNegocio.csproj
@@ -51,6 +51,10 @@
     <Compile Include="CN_Alta usuario\CN_Alta_Usuario.cs" />
     <Compile Include="Bitacora\CN_Bitacora.cs" />
     <Compile Include="Backup\CN_BackUp.cs" />
+    <Compile Include="CN_GuardarContraseña.cs" />
+    <Compile Include="CN_MostrarDatosUsuario.cs" />
+    <Compile Include="CN_GuardarFamilias y roles.cs" />
+    <Compile Include="CN_GuardarPreguntasSeguridad.cs" />
     <Compile Include="CN_Usuario\CN_BloquearUsuario.cs" />
     <Compile Include="CN_Paquetes\CN_BuscarPaquete.cs" />
     <Compile Include="CN_Reservas\CN_Busqueda.cs" />
@@ -86,6 +90,7 @@
     <Compile Include="CN_Paquetes\CN_MostrarPaquetes.cs" />
     <Compile Include="CN_Pasajeros\CN_MostrarPasajero.cs" />
     <Compile Include="CN_Hoteles\CN_MostrarProveedor.cs" />
+    <Compile Include="CN_Usuario\CN_MostrarDatosUsuarios.cs" />
     <Compile Include="CN_Usuario\CN_TraerPreguntasYRespuestas.cs" />
     <Compile Include="CN_Usuario\CN_UsuarioEnSesion.cs" />
     <Compile Include="CN_Usuario\CN_ValidarUsuario.cs" />
