--- a/Viajando (2)/Viajando/interfazPpal/interfazPal.csproj
+++ b/Viajando (2)/Viajando/interfazPpal/interfazPal.csproj
@@ -59,8 +59,11 @@
     <Compile Include="Frm Usuarios\FrmConfiguracionDeSeguridad.Designer.cs">
       <DependentUpon>FrmConfiguracionDeSeguridad.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmConfiguracionDelSistema.cs">
+    <Compile Include="Frm Usuarios\frm_AltaUsuario.cs">
       <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm Usuarios\frm_AltaUsuario.Designer.cs">
+      <DependentUpon>frm_AltaUsuario.cs</DependentUpon>
     </Compile>
     <Compile Include="Frms Reservas\FrmCrearReserva.cs">
       <SubType>Form</SubType>
@@ -193,8 +196,8 @@
     <EmbeddedResource Include="Frm Usuarios\FrmConfiguracionDeSeguridad.resx">
       <DependentUpon>FrmConfiguracionDeSeguridad.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmConfiguracionDelSistema.resx">
-      <DependentUpon>FrmConfiguracionDelSistema.cs</DependentUpon>
+    <EmbeddedResource Include="Frm Usuarios\frm_AltaUsuario.resx">
+      <DependentUpon>frm_AltaUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frms Reservas\FrmCrearReserva.resx">
       <DependentUpon>FrmCrearReserva.cs</DependentUpon>
