--- a/Viajando (2)/Viajando/CapaDatos/CapaDatos.csproj
+++ b/Viajando (2)/Viajando/CapaDatos/CapaDatos.csproj
@@ -50,6 +50,11 @@
     <Compile Include="Bitacora\CD_Bitacora.cs" />
     <Compile Include="CD_BackUp.cs" />
     <Compile Include="CD_ComparaDigitoVerificador.cs" />
+    <Compile Include="CD_EstadosUsuario\CD_AgegarEstado.cs" />
+    <Compile Include="CD_EstadosUsuario\CD_ObtenerEstadoUsuario.cs" />
+    <Compile Include="CD_TraerLocalidades.cs" />
+    <Compile Include="CD_TraerPartidos.cs" />
+    <Compile Include="CD_TraerProvincias.cs" />
     <Compile Include="CD_Usuario\CD_BloquearUsuario.cs" />
     <Compile Include="CD_Reservas\CD_Busqueda.cs" />
     <Compile Include="CD_Paquetes\CD_NuevaDisponiblidad.cs" />
