--- a/Viajando (2)/Viajando/CapaNegocio/CapaNegocio.csproj
+++ b/Viajando (2)/Viajando/CapaNegocio/CapaNegocio.csproj
@@ -52,9 +52,12 @@
     <Compile Include="Bitacora\CN_Bitacora.cs" />
     <Compile Include="Backup\CN_BackUp.cs" />
     <Compile Include="CN_GuardarContraseña.cs" />
+    <Compile Include="CN_Localidades\CN_TraerLocalidades.cs" />
     <Compile Include="CN_MostrarDatosUsuario.cs" />
     <Compile Include="CN_GuardarFamilias y roles.cs" />
     <Compile Include="CN_GuardarPreguntasSeguridad.cs" />
+    <Compile Include="CN_TraerPartidos.cs" />
+    <Compile Include="CN_TraerProvincias.cs" />
     <Compile Include="CN_Usuario\CN_BloquearUsuario.cs" />
     <Compile Include="CN_Paquetes\CN_BuscarPaquete.cs" />
     <Compile Include="CN_Reservas\CN_Busqueda.cs" />
@@ -84,6 +87,7 @@
     <Compile Include="CN_Paquetes\CN_GuardarPaquete.cs" />
     <Compile Include="CN_Usuario\CN_EditarPassword.cs" />
     <Compile Include="CN_Usuario\CN_EnviaDigitoVerificador.cs" />
+    <Compile Include="CN_Usuario\CN_EstadosUsuario.cs" />
     <Compile Include="CN_Usuario\CN_Mail.cs" />
     <Compile Include="CN_Usuario\CN_GuardaRespuestas.cs" />
     <Compile Include="CN_Usuario\CN_GuardarPrimerIngreso.cs" />
@@ -91,6 +95,7 @@
     <Compile Include="CN_Pasajeros\CN_MostrarPasajero.cs" />
     <Compile Include="CN_Hoteles\CN_MostrarProveedor.cs" />
     <Compile Include="CN_Usuario\CN_MostrarDatosUsuarios.cs" />
+    <Compile Include="CN_Usuario\CN_ObtenerEstadosUsuario.cs" />
     <Compile Include="CN_Usuario\CN_TraerPreguntasYRespuestas.cs" />
     <Compile Include="CN_Usuario\CN_UsuarioEnSesion.cs" />
     <Compile Include="CN_Usuario\CN_ValidarUsuario.cs" />
