--- a/Viajando (2)/Viajando/interfazPpal/interfazPal.csproj
+++ b/Viajando (2)/Viajando/interfazPpal/interfazPal.csproj
@@ -53,6 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Frm Usuarios\frmAgregarUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm Usuarios\frmAgregarUsuario.Designer.cs">
+      <DependentUpon>frmAgregarUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm Usuarios\FrmConfiguracionDeSeguridad.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -193,6 +199,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Frm Usuarios\frmAgregarUsuario.resx">
+      <DependentUpon>frmAgregarUsuario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frm Usuarios\FrmConfiguracionDeSeguridad.resx">
       <DependentUpon>FrmConfiguracionDeSeguridad.cs</DependentUpon>
     </EmbeddedResource>
